@@ -82,17 +82,9 @@ template($tt,'var/mkits/reset_password.mkit/body.html', $vars);
 my $t_alt = Template->new({ABSOLUTE => 1, START_TAG => quotemeta('[%['), END_TAG => quotemeta(']%]')});
 template($t_alt,'views/footer_include.tt', $vars);
 template($t_alt,'views/header_include.tt', $vars);
-template($t_alt,'views/bootstrap_css_include.tt', $vars);
-template($t_alt,'views/angular_js_include.tt', $vars);
-template($t_alt,'views/bootstrapui_js_include.tt', $vars);
-template($t_alt,'views/bootstrap_js_include.tt', $vars);
-template($t_alt,'views/select_list_include.tt', $vars);
-template($t_alt,'views/jquery_js_include.tt', $vars);
-template($t_alt,'views/wing_js_include.tt', $vars);
-template($t_alt,'views/pnotify_css_include.tt', $vars);
-template($t_alt,'views/pnotify_js_include.tt', $vars);
+template($t_alt,'views/wing_ui_css_requirements.tt', $vars);
+template($t_alt,'views/wing_ui_js_requirements.tt', $vars);
 template($t_alt,'views/error.tt', $vars);
-template($t_alt,'views/status_include.tt', $vars);
 template($t_alt,'views/admin/users.tt', $vars);
 template($t_alt,'views/admin/user.tt', $vars);
 template($t_alt,'views/admin/wingman.tt', $vars);
@@ -102,7 +94,6 @@ template($t_alt,'views/admin/trends_reports.tt', $vars);
 template($t_alt,'views/admin/manage_trends_reports.tt', $vars);
 template($t_alt,'views/admin/footer_include.tt', $vars);
 template($t_alt,'views/admin/header_include.tt', $vars);
-template($t_alt,'views/account/apikey_form_include.tt', $vars);
 template($t_alt,'views/account/apikeys.tt', $vars);
 template($t_alt,'views/account/apikey.tt', $vars);
 template($t_alt,'views/account/authenticate_include.tt', $vars);
