@@ -1,18 +1,0 @@
-<div class="form-group">
-    <label  for="name">Application Name</label>
-    <input class="form-control" type="text" name="name" id="name" value="[% apikey.name FILTER html %]">
-    <span class="form-text text-muted">This must be unique among all applications in our system.</span>
-</div>
-<div class="form-group">
-    <label  for="uri">Application URL</label>
-    <input class="form-control" type="text" name="uri" id="uri" value="[% apikey.uri FILTER html %]">
-    <span class="form-text text-muted">Optional, but appreciated. The URL of your application if it is a web app.</span>
-</div>
-<div class="form-group">
-    <label  for="reason">Reason</label>
-    <input class="form-control" type="text" name="reason" id="reason" value="[% apikey.reason FILTER html %]">
-    <span class="form-text text-muted">Optional, but appreciated. The reason you are building your app. What does it do?</span>
-</div>
-<div class="form-group">
-    <button class="btn btn-success">[% button_label %]</button>
-</div>
